# WordDetectorNN

./: pyproject.toml
src/worddetectornn/: __init__.py  aabb_clustering.py  coding.py  dataloader.py  dataset.py  eval.py  infer.py  loss.py  net.py  train.py
src/worddetectornn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
